fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@
 body {
   background-color: var(--Very-dark-blue);
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-family: "Rubik",sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
